服务器推拉流测试 processor rtmp重构 待测试

--- a/processor/src/main/resources/application.conf
+++ b/processor/src/main/resources/application.conf
@@ -3,12 +3,12 @@
 
 app {
 
-  projectVersion = "20190108"
+  projectVersion = "20200201"
 
   server {
-    protocol = "http"
-    host = "10.1.29.248:30388"
-    port = 30388
+    protocol = "rtmp"
+    host = "10.1.29.247:42069"
+    port = 42069
     InternalToken = "aklj345lkjOIu345olnmadf"
   }
 
