--- a/roomManager/src/main/resources/application.conf
+++ b/roomManager/src/main/resources/application.conf
@@ -7,21 +7,26 @@ app {
 
   server {
     protocol = "http"
-    host = "10.1.29.250:30395"
-    port = 30395
+    host = "10.1.29.250:42061"
+    port = 42061
     InternalToken = "aklj345lkjOIu345olnmadf"
   }
 
   http {
     interface = "0.0.0.0"
-    port = 30395
+    port = 42061
   }
 
 }
 
 dependence{
 
-  rtmpUrlHeader = "rtmp://10.1.29.247/live/"
+  rtmpUrlHeader = "rtmp://10.1.29.247:42069/live/"
+
+  processor {
+    ip = "10.1.29.247"
+    port = 42062
+  }
 
 }
 
