--- a/pcClient/src/main/resources/application.conf
+++ b/pcClient/src/main/resources/application.conf
@@ -16,20 +16,22 @@ app {
 dependence {
 
   roomManager.config {
-//            protocol = "http"
-    protocol = "https"
-//            wsProtocol = "ws"
-    wsProtocol = "wss"
+    protocol = "http"
+//    protocol = "https"
+    wsProtocol = "ws"
+//    wsProtocol = "wss"
+
+    domain = "10.1.29.247:42061"
  //           domain = "10.1.29.245:30387"  # 生产 - 内网
 //    domain = "media.seekloud.org:50443" # 生产 - 公网
 //            domain = "10.1.29.248:30387"  # 开发 - 内网
-        domain = "media.seekloud.com:50443"  # 开发 - 公网
+//        domain = "media.seekloud.com:50443"  # 开发 - 公网
 
     //    hostName = "10.1.29.245"     #生产(改此处无效，请用domain)
     hostName = "10.1.29.248"           #开发（改此处无效，请用domain）
     port = 30393
 
-    url = "theia/roomManager"
+    url = "netMeeting"
     width = 640
     height = 480
   }
@@ -181,6 +183,11 @@ akka {
       }
 
       throughput = 100
+    }
+
+    my-pinned-dispatcher {
+      executor = "thread-pool-executor"
+      type = PinnedDispatcher
     }
 
   }
