--- a/roomManager/src/main/resources/application.conf
+++ b/roomManager/src/main/resources/application.conf
@@ -24,8 +24,8 @@ dependence{
   rtmpUrlHeader = "rtmp://10.1.29.247:42069/live/"
 
   processor {
-    ip = "10.1.29.247"
-    port = 42062
+    ip = "47.92.170.2"
+    port = 42068
   }
 
 }
@@ -35,8 +35,8 @@ slick.db {
   url = "jdbc:h2:file:../DATA/bubble;AUTO_SERVER=TRUE"
   //  url = "jdbc:postgresql://192.168.0.250:5432/"
   #localUrl = "jdbc:mysql://localhost:3306/mpAuthServer?characterEncoding=utf-8&rewriteBatchedStatements=true"
-  user = "bubble"
-  password = "bubble"
+  user = ""
+  password = ""
   maximumPoolSize = 10
   connectTimeout = 30000
   idleTimeout = 300000
