--- a/processor/src/main/resources/application.conf
+++ b/processor/src/main/resources/application.conf
@@ -14,8 +14,10 @@ app {
 
   http {
     interface = "0.0.0.0"
-    port = 30388
+ //   port = 42068
+   port = 30388
   }
+
   
   appId = "processor"
   secureKey = "0379a0aaff63c1ce"
