--- a/roomManager/src/main/resources/application.conf
+++ b/roomManager/src/main/resources/application.conf
@@ -28,6 +28,14 @@ dependence{
     port = 42068
   }
 
+  email{
+    host = "smtp.exmail.qq.com"
+    port = "25"
+    addresserEmail = "flowservice@neotel.com.cn"
+    addresserPwd = ""
+    domain = "flowdev"  //开发
+  }
+
 }
 
 
