--- a/roomManager/src/main/resources/application.conf
+++ b/roomManager/src/main/resources/application.conf
@@ -36,6 +36,18 @@ dependence{
     domain = "flowdev"  //开发
   }
 
+  hestia.config {
+    appId = "roomManager"
+    secureKey = "KJHkadhkaA92KJKsina"
+    protocol = "http"
+    imgProtocol = "http"
+    domain = "pic.neoap.com"
+  }
+
+  file{
+    headImgPath = "./head_img"
+  }
+
 }
 
 
