解决声音问题

--- a/processor/src/main/resources/application.conf
+++ b/processor/src/main/resources/application.conf
@@ -23,7 +23,8 @@ app {
   secureKey = "0379a0aaff63c1ce"
 
 
-  bitRate = 2000000
+  bitRate = 1000000
+  sampleRate = 44100
   imageWidth = 640
   imageHeight = 360
 
