--- a/processor/src/main/resources/application.conf
+++ b/processor/src/main/resources/application.conf
@@ -81,7 +81,7 @@ session {
 
 akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
-  loglevel = "DEBUG"
+  loglevel = "INFO"
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
 
 
